# oteltest

./: README.md  pyproject.toml
.github/workflows/: tests.yml
example_scripts/: client_server.py  metrics_trace_api.py
src/oteltest/: __init__.py  main.py  private.py  telemetry.py
src/oteltest/sink/: __init__.py  main.py
tests/: test_oteltest.py
tests/fixtures/: client_server.pkl  metrics_trace.pkl  script.py
